@@ -1,0 +1,11 @@
+<h3>
+  <a href="@{AddGlacierR}">
+    <i .icon-plus-sign></i> Amazon Glacier
+<p>
+  Low cost offline data archival.
+
+<h3>
+  <a href="@{AddIAR}">
+    <i .icon-plus-sign></i> Internet Archive
+<p>
+  Free archival of public data.
