@@ -16,13 +16,6 @@
 <p>
   Good choice for professional quality storage.
 
-$if not onlyTransfer
-  <h3>
-    <a href="@{AddGlacierR}">
-      <i .icon-plus-sign></i> Amazon Glacier
-  <p>
-    Low cost offline data archival.
-
 <h3>
   <a href="@{AddSshR}">
     <i .icon-plus-sign></i> Remote server
