@@ -29,4 +29,4 @@
   ^{cloudRepoList}
   <h2>
     Add a cloud repository
-  ^{makeCloudRepositories True}
+  ^{makeCloudRepositories}
