@@ -31,6 +31,8 @@ git-annex (4.20130418) UNRELEASED; urgency=low
   * assistant: Sanitize XMPP presence information logged for debugging.
   * initremote: If two existing remotes have the same name,
     prefer the one with a higher trust level.
+  * Add public repository group.
+  * webapp: Can now set up Internet Archive repositories.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 18 Apr 2013 16:22:48 -0400
 
